<resources>
	<string name="appversion">0.4.1</string>
    <string name="app_name">Scores</string>
    <string name="logo">Scores” logo</string>
    <string name="login">Login</string>
    <string name="login_f">Login with Facebook</string>
    <string name="olvida_pass">Forgot your password?</string>
    <string name="registro">Sign up</string>
    <string name="registrate">If you\'re not still a user, Sign up now!</string>
    <string name="slogan">Scores of the future</string>
    <string name="facebook_app_id">1439111256308763</string>
    <string name="beta">Beta</string>
    	<string name="mail">EMail</string>
    	<string name="pass">Password</string>
    	<string name="login_title">Login</string>
    	<string name="err_campos_vacios">You should to complete all the fields</string>
    	<string name="err_login_unknown_user">User name and/or password incorrect</string>
    	<string name="err_not_active">This account is pending activation</string>
    	<string name="err_login_unknown">There was an error. Please, try again</string>
    	<string name="cancel">Cancel</string>
    	<string name="confirm_login">Login</string>
    	<string name="cerrar_sesion">Logout</string>
    	<string name="close_d">Close</string>
    	<string name="auth">Authenticating&#8230;</string>
    	<string name="err_session">Couldn\'t start the session. Please, try again later.</string>
    	<string name="olvido_title">Recover password</string>
    	<string name="mail_olvido_pass">Introduce Email</string>
    	<string name="confirm_olvidopass">Send</string>
    	<string name="err_olvidopass_unknown">There was an error and could not recover the password.
    	    Please, try again later</string>
    	<string name="olvidopass_ok">We\'ve sent an email with instructions about your password</string>
    	<string name="err_olvidopass_mail">﻿We didn\'t find any account associated with this email</string>
    	<string name="err_olvidopass_mail_not_sent">﻿Your password was changed but couldn\'t send it. 
     Please, try again later</string>
    	<string name="registro_title">Sign up</string>
    	<string name="nombre_registro">Name</string>
    	<string name="mail_registro">Email</string>
    	<string name="pass_registro">Password</string>
    	<string name="confipass_registro">Confirm password</string>
    	<string name="confirm_registro">Sign up</string>
    	<string name="err_net">﻿There was a network error and it wasn\'t possible to send data. Please, try again later.</string>
    	<string name="err_pass">Passwords don\'t match</string>
    	<string name="err_reg">﻿There was an error trying to do the registration. 
    	    Please, try again later.</string>
    	<string name="err_reg_mail">﻿This email is already in use, please choose another</string>
    	<string name="ok_reg">An email have been sent</string>
    	<string name="ok_reg_mail">﻿Registration is completed but could not send the confirmation email. We\'ll send it manually within a maximum of 24 hours.</string>
    	<string name="creating_account">Creating your account&#8230;</string>
    	<string name="aviso_registro_1">By registering you agree to the </string>
    	<string name="aviso_registro_2">Terms </string>
    	<string name="aviso_registro_3">and </string>
    	<string name="aviso_registro_4">Conditions </string>
    	<string name="aviso_registro_5">of the application</string>
    <string name="titulo_coleccion">My collection</string>
    <string name="bin">Delete</string>
    <string name="action_sort">Sort</string>
    <string name="author">Author</string>
    <string name="author_dialog_title">Select an author</string>
    <string name="instrument">Instrument</string>
    <string name="instrument_dialog_title">Select an instrument</string>
    <string name="name">Sort by name</string>
    <string name="format_dialog_title">Select a format</string>
    <string name="format">Sort by format</string>
    <string name="show_all">Show all</string>
    <string name="action_search">Search</string>
    <string name="no_scores">Your scores collection is empty. 
You can buy scores in our store.</string>
    <string name="no_scores_button">Go to Score Store</string>
    <string name="error_folder">There was a problem iniciating Scores</string>
    <string name="incorrect_security_line">You cannot open this score, is registered by other user</string>
    <string name="incorrect_user">Incorrect user</string>
	<string name="sort_no_scores">There isn\'t Scores to sort</string>
    <string name="sort_error">There was an error in sort</string>
    <string name="pdf_upload_error">There was an error when uploading the PDF file</string>
    <string name="open_file">Open file</string>
    <string name="pdf_advise">You should have an external app to open this PDF files </string>
    	<string name="upload_pdf">Upload PDF file</string>
    	<string name="upload">Upload</string>
    	<string name="select">Select</string>
    	<string name="choose_directory">Choose your file</string>
    	<string name="pdf_error">Selected file is not a PDF file</string>
    <string name="metronome">Metronome</string>
    	<string name="metronome_pause">Pause</string>
    	<string name="metronome_stop">Stop</string>
    	<string name="metronome_back">Back to top</string>
    	<string name="close_metronome">Close metronome</string>
    	<string name="tempo">Tempo</string>
    <string name="readMicrophone">Microphone</string>
    <string name="navigate">Navigation</string>
    <string name="navigate_top">Go to the top</string>
    <string name="navigate_bottom">Go to the bottom</string>
    <string name="mis_datos">My profile</string>
    	<string name="mis_datos_nombre">Name:</string>
    	<string name="mis_datos_email">Email:</string>
    	<string name="mis_datos_clave_vieja">Old password</string>
    	<string name="mis_datos_clave_nueva">New password</string>
    	<string name="mis_datos_clave_repetir">Confirm new password</string>
    	<string name="mis_datos_boton">Change password</string>
    	<string name="mis_datos_saldo">Credit:</string>
    <string name="feedback">Feedback</string>
    <string name="terminos_condiciones">Terms and conditions</string>
    <string name="condiciones_compra">Term of purchase</string>
    	<string name="condiciones">
    	    TERMS OF PURCHASE\n\n

			1. PURPOSE AND DESCRIPTION OF PRODUCTS\n\n

			RISING S.C.P. (hereinafter RISING) is the creator and owner of the application Scores
			(hereinafter, the APPLICATION) offered on the site www.scores.rising.es (hereinafter, the WEB)
			generated and structured from software, design and content, along with other information
			both own from reputable suppliers and offers online support (hereinafter STORE) 
			in which the CUSTOMER can purchase sheet music in digital format
			that can be used by the application itself. This Agreement regulates the provision and
			supply to the CUSTOMER through the Internet telecommunications network, products
			by RISING. The products are those that are available through the STORE and
			in price lists contained in it, reserving however that company the right
			to amend and revise such rates and products. \n\n

			2. GENERAL TERMS\n\n

			The order by the CUSTOMER of the products of the STORE presupposes the acceptance of these
			Conditions of Purchase and Terms listed both in the  WEB  and in the APPLICATION, and is
			perfected in the moment of the purchase order. \n\n

			The presentation of products on the screen itself does not constitute an offer of sale itself from a
			contractual point of view, but it is merely a showcase of the products available to the STORE. \n\n

			3. PRICE\n\n

			The cost of the products specified in the STORE will be established for each of them and force in
			each time, which is accessible via the store and displayed on the information attached to the product.
			RISING reserves the right to change prices at any time, being of application that modification to the 
			parties since it is incorporated into the Web. \n\n

			4. ACQUISITION OF CREDIT\n\n

			4.1. To purchase any of the products available through the SHOP, the CLIENT will available in the STORE 
			an option that will allow to add credit to the CLIENT\'s account. \n\n

			4.2. This option will consist that the CLIENT  shall pay to RISING a monetary amount that, after payment, will be 
			posted to the CLIENT account as a virtual credit (hereinafter CREDIT). This is the CREDIT
			that allow the CUSTOMER to purchase scores in the STORE. \n\n

			4.3. If the CLIENT does not have enough CRDIT to purchase a score, can not buy it.
			In this case, if the CLIENT wish to acquire this score should add more CREDIT into the account. \n\n
		
			4.4. RISING does not handle CREDIT returns.\n\n			

			5. DELIVERY\n\n

			The delivery of products purchased will occur immediately after the payment has been made and 
			from the STORE. Additionally, an email will be sent to the client with information of the purchase, 
			as well as the bill itself \n\n

			6. RETURNS\n\n

			Being products and services in digital format and for obvious reasons, no returns allowed. \n\n

			7. WARRANTY\n\n

			In the case of a problem, the purchased product could not be downloaded or was technically defective
			so it was impossible to read and use, the CLIENT must contact, before 15 days, with 
			RISING (info@rising.es) to request a copy of these products. RISING provide copies of such
			products provided only if the claim occurs within the 15 days mentioned. \n\n

			In case of loss or corruption of the acquired and paid files in the STORE, RISING provide a new copy
			the CLIENT and will do up to 3 times as long as the product acquired for the CLIENT is current and not 
			discontinued at the time of the application result. To make this possible delivery, the CLIENT must
			contact with RISING and provide necessary information how to both product and verification
			that this was actually purchased in the STORE. \n\n

			8. BILLING AND PAYMENT\n\n

			The CLIENT will make payment of products using the payment gateway enabled by RISING and managed by an
			specialized entity. Payment is made on a secure server. At the time of payment, RISING emits and sends the bill
			to the email address provided by the CLIENT. For security reasons, RISING does not store data of payment in 
			any form, leaving the entire purchase process by the entity. RISING just received, by the entity, the authorization 
			code or failing the cause of failure of the operation (card denied, expired, etc..). \n\n

			9. JURISDICTION AND APPLICABLE LAW\n\n

			9.1. The present Terms shall be governed by the provisions of Spanish legislation.\n\n

			9.2. In the case that any discrepancy or dispute arising from the interpretation or Application of these 
			Terms of Use, RISING and the CLIENT expressly waiving any other jurisdiction he could be entitled, 
			subject to the jurisdiction of the Courts and Tribunals of RISING address. And in the case that the CLIENT is 
			resident outside of Spain, RISING and CLIENT expressly waive any other jurisdiction that may apply, 
			subject to the jurisdiction of the Courts of Las Palmas de Gran Canaria. \n\n
			
			9.3 In the event of a misunderstanding caused by the translation of these Terms of Use or any other 
			document of the WEB, the original document prevails at all times, in this case written in 
			Spanish.\n\n	    
    	</string>
    <string name="cambiar_pass">Change password</string>
    <string name="eliminar_cuenta">Delete account</string>
    <string name="about">About Scores</string>
    	<string name="store">Store</string>
    	<string name="buy_agree">Want to buy this score?</string>
    				<string name="share_button">Share</string>
			    	<string name="friendmail2">Friend e-mail</string>
			    	<string name="receive_friends">You will receive 0,15 credits!</string>
    	<string name="user_profile">User profile</string>
</resources>