<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
  	    
    <item 
        android:id="@+id/metronome_tempo" 
        android:title="@string/tempo" 
        android:showAsAction="always" tools:ignore="AlwaysShowAction">
    </item>

    <item 
        android:id="@+id/metronome_menu_back" 
        android:title="@string/metronome_back" 
        android:icon="@drawable/back_button" 
        android:showAsAction="always">
    </item>

    <item 
        android:id="@+id/metronome_menu_pause" 
        android:title="@string/metronome_pause" 
        android:icon="@drawable/pause_button" 
        android:showAsAction="always">
    </item>

    <item 
        android:id="@+id/metronome_menu_stop" 
        android:title="@string/metronome_stop" 
        android:icon="@drawable/stop_button" 
        android:showAsAction="always">
    </item>
 	
 	<item 
        android:id="@+id/close_metronome" 
        android:title="@string/close_metronome" 
        android:showAsAction="ifRoom">
    </item>
</menu>
