<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_scoresapp"
    android:orientation="vertical" >

    <EditText 
        android:id="@+id/misDatosClaveVieja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mis_datos_clave_vieja"
        android:textColorHint="#CCC"
        android:textColor="#EEE"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword" />
    
    <EditText 
        android:id="@+id/misDatosClaveNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mis_datos_clave_nueva"
        android:textColorHint="#CCC"
        android:textColor="#EEE"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword" />
    
    <EditText 
        android:id="@+id/misDatosClaveRepetir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mis_datos_clave_repetir"
        android:textColorHint="#CCC"
        android:textColor="#EEE"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/misDatosBoton"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/stores_buttons"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#DDD"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mis_datos_boton"/>

</LinearLayout>
