<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_scoresapp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_buy_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#222"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/buy_agree"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_confirm_buy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="#EEE"
            android:background="@drawable/stores_buttons"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/confirm_login" />

        <Button
            android:id="@+id/b_cancel_buy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="#EEE"
            android:background="@drawable/stores_buttons"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>
